# lib_tiny_font

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  configure  configure.ac
src/: Makefile.am  font_struct.c  font_struct.h  main.c  main.h
src/bdf_parser/: bdf_parser.c  bdf_parser.h
