AC_INIT([lib_tiny_font],[0.01],[hunyeti@gmail.com])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror subdir-objects foreign])
AC_CONFIG_FILES([Makefile])
#: ${CFLAGS="-O2 -std=c11 -Wall "}
AC_PROG_CC
AM_PROG_CC_C_O
AC_OUTPUT
